--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@
 }
 
 /*Q2-4*/
-#q4, #q4 img {
+#q4 img {
 	width: 50%;
 	float: left;
 }
@@ -59,6 +59,5 @@
 	border: 1px solid black;
 }
 #q5 {
-	width: 50%;
 	font-family: Helvetica, Arial, sans-serif;
 }
