--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,35 @@
+[class*="col-"] {width: 100%;}
+/*For small to medium devices*/
+@media only screen and (min-width: 768px) {
+	.col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+/*For large devices and up*/
+@media only screen and (min-width: 992px) {
+	.col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
 #rosesred {
 	animation: roses 4s linear infinite alternate;
 	display: inline;
@@ -39,31 +71,25 @@
 }
 
 /*Q2-3*/
-#q2 div {
-	position: relative;
-	display: inline-block;
-}
+#q2 div {display: inline-block;}
 
 /*Q2-4*/
 #q4, #q4 img {
-	width: 40%;
+	width: 45%;
 	float: left;
-}
-#q4 {
-	padding: 0px 0px 0px 5px;
-}
-#q4 img {
 	padding: 0px 5px 0px 0px;
 }
 
 /*Q2-5*/
-#q5 table {
-	border-collapse: collapse;
-}
-#q5 table, th, td {
-	border: 1px solid black;
-}
+#q5 table {border-collapse: collapse;}
+#q5 table, th, td {border: 1px solid black;}
 #q5 {
-	width: 40%;
+	width: 50%;
 	font-family: Helvetica, Arial, sans-serif;
 }
+#q5 th {
+	text-align: left;
+	background-color:#36454f;
+	color:rgb(255,250,250);
+}
+#q5 table tr:last-child {text-align: center;}
