--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,14 @@
 #q4 {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	background: red;
+	margin-bottom: 5px;
 }
-#q4 img {padding: 0px 5px 0px 0px;}
+#q4 img {
+	width: 50%;
+	height: auto;
+}
 #q4 img, p {align-self: center;}
 
 /*Q2-5*/
