--- a/Lab 3/lab_3_bad_css.css
+++ b/Lab 3/lab_3_bad_css.css
@@ -1,31 +1,25 @@
 
-doc {
+.doc {
   background: green;
   height: 960px;
   width: 480px;
 }
 
-.container {
-  body: purple;
-  margin: 0;
+div {
+  width: 100px;
+  height: 42px;
+  margin: auto;
 }
 
-  div {
-    color: red
-    width: 100px;
-    height: 42px;
-  }
-
-newsline {
+.newsline {
   font-size: 42px;
-  font-style: bold;
   font-weight: 400;
 }
 
-wrapper {
+.wrapper {
   width: 60%;
   height: 100vh;
-  width: 22vh;
+  margin: auto;
   background: grey;
 }
 
@@ -38,13 +32,17 @@ wrapper {
 
 .head a,
 .head {
-  margin: 0;
+  margin: auto;
   padding: 0;
 }
 
-second_container {
+.second_container {
   background: pink;
   height: 150px;
+  width: 100%;
+  display: flex;
+  align-content: center;
+  margin-bottom: 10px;
 }
 
 .container {
@@ -52,22 +50,35 @@ second_container {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+  width: 100%;
 }
 
-textbox {
+.textbox {
   height: 100px;
   width: 350px;
   margin-bottom: 25px;
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
 }
 
 .green {
   background: red;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .second {
   background: lightblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.interior {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
